--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/oqzulz329/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486819.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-320x200.jpg"><p align="center">【一线采访】厦门人街头举横幅要中共下台</p></a>
-<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486819.md#1" title="【一线采访】厦门人街头举横幅要中共下台""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486819.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-320x200.jpg"><p align="center">【一线采访】劳工街头举横幅要中共下台</p></a>
+<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486819.md#1" title="【一线采访】劳工街头举横幅要中共下台""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/bdcdc5ed7fc0ea0a62a47979d595029a-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482137.md#1" title="【最新疫情10.19】全球病例突破4千万大关""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1228568126-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482843.md#1" title="【独家】严控意识形态 习近平左转三节点""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-146033862-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486178.md#1" title="中共人质外交威胁美加 专家：流氓本性使然""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-81377998-600x399-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485086.md#1" title="朱利安尼：拜登儿子抱怨 钱财与老爹分半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-76111059-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485003.md#1" title="伊朗称联合国武器禁运到期 蓬佩奥强烈回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1QR3K3-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqzulz329.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486982.md#1">基督被缩写成JD 宗教信仰被迫“跟党走”</a><br>
-:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486978.md#1">美国情报总监：亨特电邮丑闻跟俄罗斯无关</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486787.md#1">台学者：新闻自由不是跟着敌人打自己国家</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486773.md#1">备战疫情及流感 美最大连锁药店增聘1.5万人</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486839.md#1">央企人员在刚果捕杀穿山甲 血淋淋视频引众怒</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486819.md#1">【一线采访】厦门人街头举横幅要中共下台</a><br>
+:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486931.md#1">美车厂产能全开 汽车工业强势复苏至明年</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486699.md#1">遭绑架 美国女手掌写911 被上门锁匠智救</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/9/n12465104.md#1">疫情下 英国华人派发“拒绝中共”传单</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486982.md#1">基督被缩写成JD 宗教信仰被迫“跟党走”</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486978.md#1">美国情报总监：亨特电邮丑闻跟俄罗斯无关</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486787.md#1">台学者：新闻自由不是跟着敌人打自己国家</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483265.md#1">中共高调反美 京沪托福考位名额5分钟抢光</a><br>
@@ -26,8 +26,8 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484351.md#1">【大陆新闻解毒】时事小品：习南巡 人算不如天算</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483109.md#1">中共发人质威胁信号 拟报复美起诉中共学者</a><br>
-<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484638.md#1">【珍言真语】刘锐绍：林郑失宠 港官六神无主</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
+<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484638.md#1">【珍言真语】刘锐绍：林郑失宠 港官六神无主</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483405.md#1">【视频】湖南派出所所长办案索要五千万被录音</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483656.md#1">蓬佩奥：中共对美国构成非常独特挑战</a><br>
 <br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,847,624 人
+!共 365,850,298 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
