--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -25,6 +25,10 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>佛罗里达州新增病例不足2,000例?一周内首次</h3>
+<p>佛罗里达卫生部称，周一至少报告了1707例新的Covid-19病例，另有约54例死亡。</p>
+<p>根据州卫生部发布的数据，周一的每日中共病毒病例数是该州一周内首次不到2000例。</p>
+<p>州数据显示，该州现在总共至少有756,727例病例，居民死亡人数目前约为16,222。</p>
 <h3>研究：许多染疫疗养院居民测试前无症状</h3>
 <p>根据周一发表的新研究，许多患有中共病毒的疗养院居民在测试前没有出现症状。</p>
 <p>美国布朗大学的伊丽莎白·怀特（Elizabeth White）及其同事在3月16日至7月15日之间，在350个熟练的护理机构研究了5,400名Covid-19患者。</p>
@@ -295,7 +299,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9772848.md#1" target="_blank">刘晓：救了毛一命的延安保卫处长凄惨下场</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">坚持在卢森堡公园炼功 法国法轮功学员谈感受</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232692.md#1" target="_blank">林辉：为延安贩卖鸦片的毒贩死前缘何喊冤？</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/24/n11406694.md#1" target="_blank">美国会吁中共释放法轮功学员 邓翠苹女儿感谢</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
