--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -17,8 +17,8 @@
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/10/n12467270.md#1" target="_blank">【成吉思汗】建大蒙古国 封功臣 扩怯薛军</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/10/n12467270.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/b850eded6a74a987bb45a4956b3ffd1c-150x120.jpg" align ="left"></a>统一了蒙古诸部落的铁木真，已经成为草原上无可争辩的统治者，其控制了从南部戈壁到北极冻土带、从东北森林地带到西部阿尔泰山的广阔领域，以及几十万来自不同游牧部落的人口。不过，虽然铁木真已是草原上的雄主，但仍需要获得所有部族的认同，新的忽里勒台大会的召开势在必行。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 11:08 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/8/14/n12329604.md#1" target="_blank">华盛顿将军系列故事：肝胆相照锻造谷</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/8/14/n12329604.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/06/Washington_and_Lafayette_at_Valley_Forge-150x120.jpg" align ="left"></a>Valley Forge，在中文一直音译为福吉谷，也有直译为锻造谷，而这两个名字，都蕴含着深刻天意，十分写照现实。1777年冬天的福吉谷，是大陆军的锻造之地，淬火锤炼之地，是绝境中的华盛顿将军在白雪皑皑的森林深处，单膝下跪，独自对天哀鸣祷告的祈祷之地；而1778年初夏，走出锻造谷的大陆军，已然改头换面，焕然一新。当后世.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 5:19 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/13/n12400102.md#1" target="_blank">【命理】如何化解伤官凶星？</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/13/n12400102.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/e67753eaeb7eb5ed57c6a1271310d99f-150x120.png" align ="left"></a>伤官格是普通格局中最复杂的一种，亦是在各种格局之中，以伤官的变化为最多，宜忌亦以伤官为最难辨。本文简单概括地从大方向提供一个思考的方向。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月17日 9:00 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486963.md#1" target="_blank">七绝：安心勿躁</a><br></h3> 部分修成若断丝，人中之我有迷痴。 余私去尽心无惑，须待完全开悟时。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 12:22 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486938.md#1" target="_blank">五律：谁知</a><br></h3> 谁知宋玉愁，付与古今秋。 吟魄悲难问，骚肠结未休。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 12:20 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12440550.md#1" target="_blank">《圣经》与《推背图》预言的应验与变换1</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12440550.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/202009301-150x120.jpg" align ="left"></a>《推背图》和《圣经》，都是当代东西方阅读量最大的书籍之一。《推背图》是唐初天文学家、天象学家李淳风所作（据《桯史》），在北宋时期就达到了家家都有的程度。它预言了从唐初到当代及未来的历史大事，迄今100%应验无失。《圣经》的《旧约》记录了犹太教的起源、发展、劫难，并预言耶稣济世，以及末后弥赛亚救世；《新约》是基督教徒对耶.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 7:39 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12442972.md#1" target="_blank">人微言轻？田夫智谏国君 楚人以歌感铭</a><br></h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12442972.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/06/1508281257272483-150x120.jpg" align ="left"></a>周朝时期，楚庄王修建高台，役使百姓。有一位田夫自告奋勇，要去劝谏国君。同伴嘲笑他，你如茅草般低微，如何能说服国君，使他罢修高台？结果，庄王听罢田夫的言论，心甘情愿改变了心意，还下令释放了所有的役民。田夫的事迹被楚人编成歌谣，四处传唱……......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月16日 5:34 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486573.md#1" target="_blank">台湾古典诗：防疫有感（二）</a><br></h3>疫起西邻肇祸端，全球袭卷恣摧残， 超前部署台湾队，化险为夷刮目看。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 12:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484431.md#1" target="_blank">玉楼春．心要正</a><br></h3>常人自有常人乐，因有追求崇执著。 昊天之下可谋生，道理之中非算错。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月20日 12:07 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484700.md#1" target="_blank">诗歌：水之吟</a><br></h3> 抽刀断水水更流， 水能载舟亦覆舟。 以柔克刚誉千古， 涤垢荡污好身手。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年10月19日 8:21 PM			</td></tr>
