--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -9,7 +9,8 @@
 	<p>【大纪元2020年10月19日讯】（大纪元记者夏雨、戴芙若、颜殊璟、林燕综合报导）10月19日全球<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>（<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.md#1">武汉肺炎</a>）疫情最新情况：</p>
 <p>中共肺炎全球疫情及美国疫情大数据请点击<ahref="https://github.com/oqzulz329/djy/blob/master/gb/nf1368917.md#1" target="_blank" rel="noopener noreferrer">这里</a>。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2020101914">美加边境关闭延长至11月21日</a></strong><br />
+<p><strong><ahref="#_Toc2020101915">研究：疗养院染疫居民测试前多无症状</a></strong><br />
+<strong><ahref="#_Toc2020101914">美加边境关闭延长至11月21日</a></strong><br />
 <strong><ahref="#_Toc2020101913">全球病例突破4000万大关</a></strong><br />
 <strong><ahref="#_Toc2020101912">TSA单日筛查人数首破百万</a></strong><br />
 <strong><ahref="#_Toc2020101911">比利时警告：疫情已失控 “海啸”逼近</a></strong><br />
@@ -25,6 +26,16 @@
 <p>美国总统川普（特朗普）在周六的竞选集会上再次表示，不会忘记病毒来自中国，且承诺若连任，将彻底结束对中国制造的依赖。</p>
 <p>=======================</p>
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
+<h3>南卡罗来纳州将举办“得来速”博览会</h3>
+<p>由于Covid-19大流行，南卡罗来纳州州博览会的组织者将在今年举办其有史以来首个“得来速”（drive-thru）博览会。</p>
+<p>根据组织者的网站，“得来速”博览会预计将在星期二开始，并将持续到星期三。</p>
+<p>主办方说，客人可以免费进入展览中心，并体验独特的、对汽车友善的景点，这些景点着眼于该州的农业、历史、艺术和文化。</p>
+<p>“在我们一生中最严重的全球危机中，我们希望给社区带来正面的希望，”总经理南希·史密斯（Nancy Smith）说。</p>
+<h3>法国第一夫人自我隔离</h3>
+<p>法国爱丽舍宫周一说，法国第一夫人碧姬·马克龙（Brigitte Macron）在可能暴露于染疫者之后正在自我隔离。</p>
+<p>爱丽舍宫说，第一夫人在上周四会见了某人，该人后来在周一被检出了中共病毒呈阳性。</p>
+<p>她没有出现任何症状，但会从今天开始隔离7天。</p>
+<p>爱丽舍宫补充说，这不会改变马克龙总统的日程。他没有与后来测试阳性的人进行密切接触。</p>
 <h3>纽约州测试阳性率为1.2％</h3>
 <p>纽约州州长安德鲁·库默（Andrew Cuomo）周一报告称全州有14例新死亡，测试阳性率为1.2％，“红色区域”为3.3％。</p>
 <p>库默在周一的电话会议上说，该州已报告了934例住院治疗，其中198名重症监护患者。</p>
@@ -33,7 +44,8 @@
 <p>佛罗里达卫生部称，周一至少报告了1707例新的Covid-19病例，另有约54例死亡。</p>
 <p>根据州卫生部发布的数据，周一的每日中共病毒病例数是该州一周内首次不到2000例。</p>
 <p>州数据显示，该州现在总共至少有756,727例病例，居民死亡人数目前约为16,222。</p>
-<h3>研究：许多染疫疗养院居民测试前无症状</h3>
+<p><a name="_Toc2020101915"></a></p>
+<h3>研究：疗养院染疫居民测试前多无症状</h3>
 <p>根据周一发表的新研究，许多患有中共病毒的疗养院居民在测试前没有出现症状。</p>
 <p>美国布朗大学的伊丽莎白·怀特（Elizabeth White）及其同事在3月16日至7月15日之间，在350个熟练的护理机构研究了5,400名Covid-19患者。</p>
 <p>研究小组在《 JAMA Internal Medicine》杂志上报告说，其中40％以上没有症状。</p>
@@ -303,7 +315,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/15/n10395165.md#1" target="_blank">【还原史实】谁在对日抗战？谁在借机发展？</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/10/n3726603.md#1" target="_blank">【历史回顾】羊城晚报：老少皆炼法轮功</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281981.md#1" target="_blank">共产暴政录：苏俄及中共分裂外蒙古</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/29/n7787098.md#1" target="_blank">81岁病危老人一夜之间病好了</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
