--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -315,7 +315,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281981.md#1" target="_blank">共产暴政录：苏俄及中共分裂外蒙古</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/29/n7787098.md#1" target="_blank">81岁病危老人一夜之间病好了</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/13/n10139150.md#1" target="_blank">袁斌：中共非法抢劫剥夺富人财产的真相</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
