--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,10 +13,10 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485086.md#1" title="朱利安尼：拜登儿子抱怨 钱财与老爹分半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-76111059-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485003.md#1" title="伊朗称联合国武器禁运到期 蓬佩奥强烈回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/000_1QR3K3-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqzulz329.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486944.md#1">三菱缩减大陆业务 11月关闭一合肥工厂</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486847.md#1">【珍言真语】梁锦祥：拜登丑闻曝中共靠港漂白</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486931.md#1">美车厂产能全开 汽车工业强势复苏至明年</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486944.md#1">三菱缩减大陆业务 11月关闭一合肥工厂</a><br>
+:clock8: <em>57分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486847.md#1">【珍言真语】梁锦祥：拜登丑闻曝中共靠港漂白</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486931.md#1">美车厂产能全开 汽车工业强势复苏至明年</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486699.md#1">遭绑架 美国女手掌写911 被上门锁匠智救</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/9/n12465104.md#1">疫情下 英国华人派发“拒绝中共”传单</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
@@ -24,10 +24,10 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483265.md#1">中共高调反美 京沪托福考位名额5分钟抢光</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483231.md#1">【珍言真语】桑普：习近平南巡 上演障眼法</a><br>
-<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484351.md#1">【大陆新闻解毒】时事小品：习南巡 人算不如天算</a><br>
-<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483109.md#1">中共发人质威胁信号 拟报复美起诉中共学者</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485538.md#1">【拍案惊奇】纽时围川普救拜登 中共五中换人？</a><br>
+<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484351.md#1">【大陆新闻解毒】时事小品：习南巡 人算不如天算</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484638.md#1">【珍言真语】刘锐绍：林郑失宠 港官六神无主</a><br>
+<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483109.md#1">中共发人质威胁信号 拟报复美起诉中共学者</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483405.md#1">【视频】湖南派出所所长办案索要五千万被录音</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483656.md#1">蓬佩奥：中共对美国构成非常独特挑战</a><br>
 <br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,850,468 人
+!共 365,850,868 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
